--- a/work/asset/a_beginner/html/layout_01_test_02.html
+++ b/work/asset/a_beginner/html/layout_01_test_02.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<link rel="stylesheet" href="../css/src/layout_01_test_02.css">
-	<title>Document</title>
+	<title>layout exersise 01</title>
 	<!-- css -->
 	<style></style>
 </head>
@@ -22,7 +22,17 @@
 
   	<div class="container">
   		<div id="adBanner">adBanner</div>
-  		<div id="contentBox">contentBox</div>
+  		<div id="contentBox">
+        <ul class="side">
+          <li class="snb">snb</li>
+          <li class="best01">best</li>
+        </ul>
+        <ul class="mid">
+          <li class="mv">mv</li>
+          <li class="best02">best</li>
+        </ul>
+      </div><!-- // #contentBox -->
+
   		<div id="contentList">contentList</div>
   	</div><!-- // .container -->
 
