--- a/work/asset/a_beginner/html/layout_02_test.html
+++ b/work/asset/a_beginner/html/layout_02_test.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="stylesheet"
         href="../css/src/layout_02_test.css" />
-  <title>Document</title>
+  <title>layout exersise 02</title>
   <!-- css -->
   <style></style>
 </head>
+
 <body>
   <!-- design -->
   <div id="wrap">
