--- a/work/asset/a_beginner/html/layout_01_test_02.html
+++ b/work/asset/a_beginner/html/layout_01_test_02.html
@@ -21,24 +21,36 @@
   	</div><!-- // #headBox -->
 
   	<div class="container">
+
   		<div id="adBanner">adBanner</div>
+
   		<div id="contentBox">
-        <ul class="side">
-          <li class="snb">snb</li>
-          <li class="best01">best</li>
-        </ul>
-        <ul class="mid">
-          <li class="mv">mv</li>
-          <li class="best02">best</li>
-        </ul>
+          <div class="snb">snb</div>
+          <div class="best_1">best</div>
+          <div class="mv">mv</div>
+          <div class="best_2">best</div>
       </div><!-- // #contentBox -->
 
-  		<div id="contentList">contentList</div>
+  		<div id="contentList">
+        <ul>
+          <li>box_1</li>
+          <li>box_2</li>
+          <li>box_3</li>
+        </ul>  
+      </div>
   	</div><!-- // .container -->
 
   	<div id="footBox">
   		<h2>h2</h2>
-  		<div class="info">info</div>
+
+  		<div class="info">
+        <ul>
+          <li class="info_navi">info_nav</li>
+          <li class="address_con">address_con</li>
+          <li class="copyright">copyright</li>
+        </ul>  
+      </div>
+
   		<div class="family_menu">family_menu</div>
   	</div><!-- // #footBox -->
 
