--- a/work/asset/b_step_01_layout/html/semantic_01.html
+++ b/work/asset/b_step_01_layout/html/semantic_01.html
@@ -16,14 +16,13 @@
     </header><!-- // #headBox -->
 
     <nav id="gnb">
-      <h2>
+      <h2></h2>
         <ul>
           <li>nav_1</li>
           <li>nav_2</li>
           <li>nav_3</li>
           <li>nav_4</li>
         </ul>
-      </h2>
     </nav><!-- // #gnb -->
 
     <section id="contentBox" class="clearfix">
@@ -139,6 +138,9 @@
   </div><!-- // #wrap -->
   
   <!-- javascript -->
-  <script></script>
+  <script src="../js/base/jquery-3.3.1.js"></script>
+  <script>
+    (function($) {})(jQuery);
+  </script>
 </body>
 </html>
