--- a/work/asset/b_step_01_layout/html/semantic_layout_test_02.html
+++ b/work/asset/b_step_01_layout/html/semantic_layout_test_02.html
@@ -10,7 +10,114 @@
 </head>
 
 <body>
-  
+  <div id="wrap"> 
+    <header id="headBox">
+      <h1><span class="hidden">카카오</span></h1>
+      <nav class="nav_1">
+        <h2><span class="hidden">사이트 맵</span></h2>
+      </nav>
+      <nav class="nav_2">
+        <h2><span class="hidden">카테고리</span></h2>
+      </nav>
+    </header><!-- // #headBox -->
+
+    <div id="adBox">
+      <div>ad_textBox</div>
+    </div><!-- // #adBox -->
+
+    <div id="snbBox">
+      <div class="snb_title">
+        <h2><span class="hidden">카카오 업데이트</span></h2>
+        <div>카카오 업데이트 설명</div>
+      </div>
+      <div class="snb_box">
+        <div>box_1</div>
+        <div>box_2</div>
+        <div>box_3</div>
+      </div>
+      <div>indicator</div>
+    </div><!-- // #snbBox -->
+
+    <div id="serviceBox">
+      <div class="service_title">
+        <h2><span class="hidden">카카오 서비스</span></h2>
+        <div>카카오 서비스 설명</div>
+      </div>
+      <div class="service_img">
+        <div>img_1</div>
+        <div>img_2</div>
+        <div>img_3</div>
+      </div>
+    </div><!-- // #serviceBox -->
+
+    <div id="newsBox">
+      <div class="news_title">
+        <h2><span class="hidden">카카오 뉴스</span></h2>
+        <div>카카오 뉴스 설명</div>
+      </div>
+      <div class="news_box">
+        <div>box_1</div>
+        <div>box_2</div>
+        <div>box_3</div>
+      </div>
+    </div><!-- // #newsBox -->
+
+    <div id="privacyBox">
+      <h2><span class="hidden">카카오 보안</span></h2>
+      <div class="privacy_text">
+        <div>카카오 보안 타이틀</div>
+        <div>카카오 보안 설명</div>
+        <div>더보기</div>
+      </div>
+      <div class="privacy_box">
+        <div class="big_box">
+          <div>big_1</div>
+          <div>big_2</div>
+          <div>big_3</div>
+          <div>big_4</div>
+        </div>
+        <div class="small_box">
+          <div>small_1</div>
+          <div>small_2</div>
+          <div>small_3</div>
+          <div>small_4</div>
+        </div>
+      </div>
+    </div><!-- // #privacyBox -->
+
+    <div id="fnbBox">
+      <div class="fnb_1">
+        <nav class="fnb_1_nav">
+          <h2><span class="hidden">이용약관</span></h2>
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>4</div>
+          <div>5</div>
+          <div>6</div>
+          <div>7</div>
+          <div>8</div>
+        </nav>
+      </div>
+      <div class="fnb_2">
+        <nav class="fnb_2_nav">
+          <h2><span class="hidden">회사소개</span></h2>
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>4</div>
+        </nav>
+      </div>
+    </div><!-- // #fnbBox -->
+
+    <footer id="footBox">
+      <div class="address">
+        <div>address_1</div>
+        <div>address_2</div>
+      </div>
+    </footer><!-- // #footBox -->
+
+  </div><!-- // #wrap -->
 
   <!-- javascript -->
   <script src="../js/base/jquery-3.3.1.js"></script>
