--- a/work/asset/b_step_01_layout/html/pantech_layout_01.html
+++ b/work/asset/b_step_01_layout/html/pantech_layout_01.html
@@ -30,13 +30,166 @@
 <body>
   <!-- layout -->
   <div class="wrap">
-    <header id="headBox">headBox</header><!-- // #headBox -->
-    <article id="adBox">adBox</article><!-- // #adBox -->
-    <article id="infoBox">infoBox</article><!-- // #infoBox -->
-    <article id="businessBox">businessBox</article><!-- // #businessBox -->
-    <article id="aboutBox">aboutBox</article><!-- // #aboutBox -->
-    <aside id="sideBox">sideBox</aside><!-- // #sideBox -->
-    <footer id="footBox">footBox</footer><!-- // #footBox -->
+
+    <div class="head_wrap area_wrap">
+      <header id="headBox">
+        <div id="logo">
+          <hl>logo</hl>
+        </div>
+        <div id="gnbBox">
+          <nav>1</nav>
+          <nav>2</nav>
+          <nav>3</nav>
+          <nav>4</nav>
+          <nav>5</nav>
+        </div>
+        <div id="searchBox">
+          <div>1</div>
+          <div>2</div>
+        </div>
+      </header>
+    </div><!-- // .head_wrap -->
+
+    <div class="ad_wrap area_wrap">
+      <article id="adBox">
+        <dl>
+          <dt>title</dt>
+          <dd>par</dd>
+        </dl>
+        <ul id="indigator">
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+        </ul>
+      </article>
+    </div><!-- // .ad_wrap -->
+
+    <div class="info_wrap area_wrap">
+      <article id="infoBox">
+        <div class="info_text">text</div>
+        <ul>
+          <li>1</li>
+          <li>2</li>
+        </ul>
+        <div class="img">img</div>
+      </article>
+    </div><!-- // .info_wrap -->
+
+    <div class="business_wrap area_wrap">
+      <article id="businessBox">
+        <dl class="business_box1">
+          <dt>title</dt>
+          <dd>par</dd>
+        </dl>
+        <div class="business_box2">
+          <div>
+            <div class="icon_box">icon1</div>
+            <dl class="text_box">
+              <dt>title</dt>
+              <dd>par</dd>
+            </dl>
+          </div>
+          <div>
+            <div class="icon_box">icon2</div>
+            <dl class="text_box">
+              <dt>title</dt>
+              <dd>par</dd>
+            </dl>
+          </div>
+          <div>
+            <div class="icon_box">icon3</div>
+            <dl class="text_box">
+              <dt>title</dt>
+              <dd>par</dd>
+            </dl>
+          </div>
+        </div>
+      </article>
+    </div><!-- // .business_wrap -->
+
+    <div class="about_side_wrap area_wrap">
+      <article id="aboutBox">
+        <dl>
+          <dt>title</dt>
+          <dd>par</dd>
+        </dl>
+        <div class="box_wrap">
+          <div class="a_box">
+            <div class="a_top">
+              <div class="t_title"></div>
+              <div class="t_plus"></div>
+            </div>
+            <div class="a_mid">
+              <div class="m_img"></div>
+            </div>
+            <div class="a_bottom">
+              <div class="b_par"></div>
+            </div>
+          </div>
+          <div class="a_box">
+            <div class="a_top">
+              <div class="t_title"></div>
+              <div class="t_plus"></div>
+            </div>
+            <div class="a_mid">
+              <div class="m_img"></div>
+            </div>
+            <div class="a_bottom">
+              <div class="b_par"></div>
+            </div>
+          </div>
+          <div class="a_box">
+            <div class="a_top">
+              <div class="t_title"></div>
+              <div class="t_plus"></div>
+            </div>
+            <div class="a_mid">
+              <div class="m_img"></div>
+            </div>
+            <div class="a_bottom">
+              <div class="b_par"></div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <aside id="sideBox">
+        <div class="s_box">
+          <div class="s_icon_box">
+            <div class="s_icon"></div>
+            <div class="s_text"></div>
+          </div>
+        </div>
+        <div class="s_box">
+          <div class="s_icon_box">
+            <div class="s_icon"></div>
+            <div class="s_text"></div>
+          </div>
+        </div>
+        <div class="s_box">
+          <div class="s_icon_box">
+            <div class="s_icon"></div>
+            <div class="s_text"></div>
+          </div>
+        </div>
+        <div class="s_box">
+          <div class="s_icon_box">
+            <div class="s_icon"></div>
+            <div class="s_text"></div>
+          </div>
+        </div>
+        <div class="s_box">
+          <div class="s_icon_box">
+            <div class="s_icon"></div>
+            <div class="s_text"></div>
+          </div>
+        </div>
+      </aside>
+    </div><!-- // .about_side_wrap -->
+
+    <div class="foot_wrap area_wrap">
+      <footer id="footBox">      footBox     </footer>
+    </div><!-- // .foot_wrap -->
+
   </div><!-- // .wrap -->
   
   <!-- javascript -->
