--- a/work/asset/b_step_01_layout/html/pantech_layout_01.html
+++ b/work/asset/b_step_01_layout/html/pantech_layout_01.html
@@ -82,7 +82,7 @@
           <dd>par</dd>
         </dl>
         <div class="business_box2">
-          <div>
+          <div> <!-- layout_sample.html 참조 -->
             <div class="icon_box">icon1</div>
             <dl class="text_box">
               <dt>title</dt>
