--- a/work/asset/a_beginner/html/layout_sample.html
+++ b/work/asset/a_beginner/html/layout_sample.html
@@ -38,6 +38,60 @@
         <dt>title</dt>
         <dd>par</dd>
       </dl>
+      <dl>
+        <dt>title</dt>
+        <dd>par</dd>
+      </dl>
+    </div>
+
+    <div class="lnb">
+      <ul class="clearfix">
+        <li>
+          <a href="#">
+           <dl>
+             <dt>
+              <span class="img_sample">
+                <!-- <img src="../img/background_test/home.png" alt=""> -->
+              </span>
+              title
+             </dt>
+             <dd>par</dd>
+           </dl>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <dl>
+             <dt>title</dt>
+             <dd>par</dd>
+           </dl>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <dl>
+             <dt>title</dt>
+             <dd>par</dd>
+           </dl>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <dl>
+             <dt>title</dt>
+             <dd>par</dd>
+           </dl>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <dl>
+             <dt>title</dt>
+             <dd>par</dd>
+           </dl>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
   
