--- a/work/asset/b_step_01_layout/html/pantech_layout_01.html
+++ b/work/asset/b_step_01_layout/html/pantech_layout_01.html
@@ -187,7 +187,21 @@
     </div><!-- // .about_side_wrap -->
 
     <div class="foot_wrap area_wrap">
-      <footer id="footBox">      footBox     </footer>
+      <footer id="footBox">
+        <div class="f_logo">logo</div>
+        <ul class="fnb">
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+          <li>5</li>
+          <li>6</li>
+        </ul>
+        <div>
+          <div class="adress">adress</div>
+          <div class="copyr">copyr</div>
+        </div>
+      </footer>
     </div><!-- // .foot_wrap -->
 
   </div><!-- // .wrap -->
