--- a/work/asset/b_step_01_layout/html/galleria_01.html
+++ b/work/asset/b_step_01_layout/html/galleria_01.html
@@ -31,11 +31,23 @@
   <!-- layout -->
   <div id="wrap">
     <header id="headBox">
-      <h1><a href="#"><span class="hidden">galleria department</span></a></h1>
+      <h1 class="hidden_wrap">
+        <a href="#"><span class="hidden">galleria department</span></a>
+      </h1>
       <nav id="gnb">
         <h2 class="hidden">global navigation</h2>
         <ul class="hidden_wrap">
-          <li><a href="#"><span>매장 정보</span></a></li>
+          <li>
+            <a href="#"><span>매장 정보</span></a>
+            <ul class="sub_nav">
+              <li><a href="#">쇼핑뉴스</a></li>
+              <li><a href="#">실시간 인기 브랜드</a></li>
+              <li><a href="#">층별안내</a></li>
+              <li><a href="#">오시는 길</a></li>
+              <li><a href="#">다른 지점보기</a></li>
+              <li><a href="#">갤러리아 면세점</a></li>
+            </ul>
+          </li>
           <li><a href="#"><span>상품 보기</span></a></li>
           <li><a href="#"><span>스타일 제안</span></a></li>
           <li><a href="#"><span>카드 및 마일리지 정보</span></a></li>
@@ -48,7 +60,7 @@
           <li><a href="#"><span>log in</span></a></li>
           <li><a href="#"><span>join</span></a></li>
           <li><a href="#"><span>sitemap</span></a></li>
-          <li><a href="#"><span>korean</span></a></li>
+          <li><a href="#" tabindex="1"><span>korean</span></a></li>
         </ul>
         <button type="button">
           <span class="hidden">search button</span>
@@ -60,14 +72,33 @@
       <h2 class="hidden">갤러리아 메인 광고</h2>
       <header class="indicator">
         <h3 class="hidden">indicator</h3>
+        <div class="banner_play_btn hidden_wrap">
+          <button type="button" class="play"><span>재생</span></button>
+          <button type="button" class="pause hidden"><span>정지</span></button>
+        </div>
+        <div class="banner_arrow_btn hidden_wrap">
+          <button type="button"><span>이전 광고 보기</span></button>
+          <button type="button"><span>다음 광고 보기</span></button>
+        </div>
+        <ul class="indicator_selector_btn hidden_wrap">
+          <li><a href="#ad1"><span>해당 광고배너의 내용 간단 설명</span></a></li>
+          <li><a href="#ad2"><span>해당 광고배너의 내용 간단 설명</span></a></li>
+          <li><a href="#ad3"><span>해당 광고배너의 내용 간단 설명</span></a></li>
+          <li><a href="#ad4"><span>해당 광고배너의 내용 간단 설명</span></a></li>
+        </ul>
       </header>
 
       <article class="ad_banner">
         <h3 class="hidden">banner content</h3>
-        <div class="banner_01"><h4>banner_01</h4></div>
-        <div class="banner_02"><h4>banner_02</h4></div>
-        <div class="banner_03"><h4>banner_03</h4></div>
-        <div class="banner_04 active"><h4>banner_04</h4></div>
+        <div id="ad1" class="banner_01 active"><h4>banner_01</h4>
+        <p>
+          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla voluptas re Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolore quam repellendus magnam est eveniet similique, reprehenderit pariatur aut. Distinctio quasi, eos laboriosam modi, explicabo voluptates hic enim quidem non eligendi! Aliquam, numquam, eos! Sed nisi optio aut quis voluptate eum, eos veniam nihil reprehenderit ad nostrum beatae autem voluptatibus quas quos soluta iste officia nulla explicabo quod nesciunt ea doloribus pariatur. Quam fuga consequuntur quas ipsum cum porro, dolore magni necessitatibus commodi neque dicta officiis sed odio aliquam deleniti, temporibus id nobis sit cupiditate cumque totam ullam laborum repellendus. At beatae ratione ipsum suscipit harum porro id nam aut.
+          </span>
+        </p>
+        </div>
+        <div id="ad2" class="banner_02"><h4>banner_02</h4></div>
+        <div id="ad3" class="banner_03"><h4>banner_03</h4></div>
+        <div id="ad4" class="banner_04"><h4>banner_04</h4></div>
       </article>
 
       <div class="scroll_view">
