--- a/work/asset/b_step_01_layout/html/galleria_01.html
+++ b/work/asset/b_step_01_layout/html/galleria_01.html
@@ -74,14 +74,20 @@
         <h3 class="hidden">indicator</h3>
         <div class="banner_play_btn hidden_wrap">
           <button type="button" class="play"><span>재생</span></button>
-          <button type="button" class="pause hidden"><span>정지</span></button>
+          <button type="button" class="pause active"><span>정지</span></button>
         </div>
+
         <div class="banner_arrow_btn hidden_wrap">
-          <button type="button"><span>이전 광고 보기</span></button>
-          <button type="button"><span>다음 광고 보기</span></button>
+          <button type="button" class="prev_btn">
+            <span>이전 광고 보기</span>
+          </button>
+          <button type="button" class="next_btn">
+            <span>다음 광고 보기</span>
+          </button>
         </div>
+
         <ul class="indicator_selector_btn hidden_wrap">
-          <li><a href="#ad1"><span>해당 광고배너의 내용 간단 설명</span></a></li>
+          <li class="active"><a href="#ad1"><span>해당 광고배너의 내용 간단 설명</span></a></li>
           <li><a href="#ad2"><span>해당 광고배너의 내용 간단 설명</span></a></li>
           <li><a href="#ad3"><span>해당 광고배너의 내용 간단 설명</span></a></li>
           <li><a href="#ad4"><span>해당 광고배너의 내용 간단 설명</span></a></li>
