--- a/work/asset/b_step_01_layout/html/sajo.html
+++ b/work/asset/b_step_01_layout/html/sajo.html
@@ -30,13 +30,75 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <header>headBox</header><!-- // #headBox -->
-    <article>adBox</article><!-- // #adBox -->
-    <article>productinfoBox</article><!-- // #productinfoBox -->
-    <section>businessBox</section><!-- // #businessBox -->
-    <section>companyBox</section><!-- // #companyBox -->
-    <section>newsBox</section><!-- // #newsBox -->
-    <footer>footBox</footer><!-- // #footBox -->
+    <header id="headBox">
+      <nav id="unb">
+        <h2 class="hidden">utility navigation</h2>
+        <ul class="hidden_wrap">
+          <li><a href="#"><span>인재채용</span></a></li>
+          <li><a href="#"><span>로그인</span></a></li>
+          <li><a href="#"><span>회원가입</span></a></li>
+          <li><a href="#"><span>고객센터</span></a></li>
+        </ul>
+      </nav>
+      <nav id="gnb">
+        <div>
+          <h1 class="hidden_wrap">
+          <a href="#"><span class="hidden">사조그룹</span></a>
+          </h1>
+          <h2 class="hidden">global navigation</h2>
+          <ul class="gnb hidden_wrap">
+            <li><a href="#"><span>브랜드소개</span></a></li>
+            <li><a href="#"><span>그룹소개</span></a></li>
+            <li><a href="#"><span>제품소개</span></a></li>
+            <li><a href="#"><span>투자정보</span></a></li>
+            <li><a href="#"><span>홍보센터</span></a></li>
+          </ul>
+          <ul class="lang hidden_wrap">
+            <li><a href="#"><span>korean</span></a></li>
+            <li><a href="#"><span>english</span></a></li>
+            <li><a href="#"><span>sajo mail</span></a></li>
+          </ul>
+        </div>
+      </nav>
+    </header><!-- // #headBox -->
+
+
+    <article id="adBox">
+      <h2 class="hidden">사조그룹 메인광고</h2>
+      <div id="ad1" class="banner_01"><h4 class="hidden">banner_01</h4></div>
+      <div id="ad2" class="banner_02"><h4 class="hidden">banner_02</h4></div>
+      <div id="ad3" class="banner_03"><h4 class="hidden">banner_03</h4></div>
+    </article><!-- // #adBox -->
+
+
+    <article id="productinfoBox">
+      <ul class="prod_box">
+        <li><h2 class="hidden">사조그룹 제품정보</h2></li>
+
+        <li><span></span><a href="#"><span>사조참치</span></a></li>
+        <li><span></span><a href="#"><span>스노우크랩킹</span></a></li>
+        <li><span></span><a href="#"><span>부산어묵</span></a></li>
+        
+        <li><span></span><a href="#"><span>참치회</span></a></li>
+
+        <li><span></span><a href="#"><span>그릴드피자</span></a></li>
+        <li><span></span><a href="#"><span>크림치즈</span></a></li>
+        <li><span></span><a href="#"><span>사조훈제연어</span></a></li>
+
+        <li><span></span><a href="#"><span>해표 콩기름</span></a></li>
+        <li><span></span><a href="#"><span>사오롱 빠오</span></a></li>
+        <li><span></span><a href="#"><span>사조 안심팜</span></a></li>
+        <li><span></span><a href="#"><span>태양초고추장</span></a></li>
+        <li><span></span><a href="#"><span>캣푸드 캔</span></a></li>
+        <li><span></span><a href="#"><span>사조옵티원</span></a></li>
+      </ul>
+    </article><!-- // #productinfoBox -->
+
+
+    <section id="businessBox"></section><!-- // #businessBox -->
+    <section id="companyBox"></section><!-- // #companyBox -->
+    <section id="newsBox"></section><!-- // #newsBox -->
+    <footer id="footBox"></footer><!-- // #footBox -->
   </div><!-- // #wrap -->
   
   <!-- javascript -->
