--- a/work/asset/b_step_01_layout/html/jquery_basic_03.html
+++ b/work/asset/b_step_01_layout/html/jquery_basic_03.html
@@ -1,7 +1,5 @@
-<snippet>
-  <content><![CDATA[
 <!DOCTYPE html>
-<!-- ${1:filename}.html -->
+<!-- jquery_basic_03.html -->
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8" />
@@ -12,7 +10,7 @@
 
   <!-- import css -->
   <link rel="stylesheet" type="text/css" href="../css/base/reset.css" />
-  <link rel="stylesheet" type="text/css" href="../css/src/${1:filename}.css" />
+  <link rel="stylesheet" type="text/css" href="../css/src/jquery_basic_03.css" />
 
   <!-- 조건부 주석 -->
   <!-- cc:id6 -->
@@ -27,21 +25,15 @@
   <!-- link:touch -->
   <link rel="apple-touch-icon" href="../favicon.png" />
   
-  <title>${2:pageTitle}</title>
+  <title>jquery_basic_03</title>
 </head>
 <body>
   <!-- layout -->
-  ${3:<div id="wrap"></div>}
+  <div id="wrap"></div>
   
   <!-- javascript -->
   <script src="../js/base/jquery-3.3.1.min.js"></script>
   <script src="../js/base/jquery-ui.min.js"></script>
-  <script src="../js/src/${1:filename}.js"></script>
+  <script src="../js/src/jquery_basic_03.js"></script>
 </body>
 </html>
-]]></content>
-  <!-- Optional: Set a tabTrigger to define how to trigger the snippet -->
-  <tabTrigger>ly</tabTrigger>
-  <!-- Optional: Set a scope to limit where the snippet will trigger -->
-  <!-- <scope>source.python</scope> -->
-</snippet>
