--- a/work/asset/b_step_01_layout/html/jquery_basic_03.html
+++ b/work/asset/b_step_01_layout/html/jquery_basic_03.html
@@ -29,7 +29,9 @@
 </head>
 <body>
   <!-- layout -->
-  <div id="wrap"></div>
+  <div class="wrap">
+    <!-- head_wrap>header>h1+nav>ul>li*10 -->
+  </div>
   
   <!-- javascript -->
   <script src="../js/base/jquery-3.3.1.min.js"></script>
