--- a/work/asset/b_step_02_jquery/html/0628jquery_slidetest_03.html
+++ b/work/asset/b_step_02_jquery/html/0628jquery_slidetest_03.html
@@ -97,6 +97,7 @@
   <!-- bootstrap -->
   <script src="../bootstrap/js/bootstrap.min.js"></script>
   <!-- myJs -->
+  <script src="../js/src/0628jquery_slidetest_03.js"></script>
   <script src="../js/src/0628jquery_slidetest_03-2.js"></script>
 </body>
 </html>
