--- a/work/asset/a_beginner/html/0702css_transform_01.html
+++ b/work/asset/a_beginner/html/0702css_transform_01.html
@@ -1,7 +1,5 @@
-<snippet>
-  <content><![CDATA[
 <!DOCTYPE html>
-<!-- ${1:filename}.html -->
+<!-- 0702css_transform_01.html -->
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8" />
@@ -19,7 +17,7 @@
 
   <!-- import css -->
   <link rel="stylesheet" type="text/css" href="../css/base/reset.css" />
-  <link rel="stylesheet" type="text/css" href="../css/src/${1:filename}.css" />
+  <link rel="stylesheet" type="text/css" href="../css/src/0702css_transform_01.css" />
 
   <!-- 조건부 주석 -->
   <!-- cc:id6 -->
@@ -34,11 +32,57 @@
   <!-- link:touch -->
   <link rel="apple-touch-icon" href="../favicon.png" />
   
-  <title>${2:pageTitle}</title>
+  <title>0702css_transform_01</title>
 </head>
 <body>
   <!-- layout -->
-  ${3:<div id="wrap"></div>}
+  <div id="wrap">
+  	<div class="transform">
+  		<h2>translate</h2>
+  		<ul>
+  			<li><span>01</span></li>
+  			<li><span>02</span></li>
+  			<li><span>03</span></li>
+  			<li><span>04</span></li>
+  		</ul>
+  	</div>
+  	<div class="transform">
+  		<h2>scle</h2>
+  		<ul>
+  			<li><span>01</span></li>
+  			<li><span>02</span></li>
+  			<li><span>03</span></li>
+  			<li><span>04</span></li>
+  		</ul>
+  	</div>
+  	<div class="transform">
+  		<h2>rotate</h2>
+  		<ul>
+  			<li><span>01</span></li>
+  			<li><span>02</span></li>
+  			<li><span>03</span></li>
+  			<li><span>04</span></li>
+  		</ul>
+  	</div>
+  	<div class="transform">
+  		<h2>skew</h2>
+  		<ul>
+  			<li><span>01</span></li>
+  			<li><span>02</span></li>
+  			<li><span>03</span></li>
+  			<li><span>04</span></li>
+  		</ul>
+  	</div>
+  	<div class="transform">
+  		<h2>perspective</h2>
+  		<ul>
+  			<li><span>01</span></li>
+  			<li><span>02</span></li>
+  			<li><span>03</span></li>
+  			<li><span>04</span></li>
+  		</ul>
+  	</div>
+  </div>
   
   <!-- javascript -->
   <script src="../js/base/jquery-3.3.1.min.js"></script>
@@ -46,12 +90,6 @@
   <!-- bootstrap -->
   <script src="../bootstrap/js/bootstrap.min.js"></script>
   <!-- myJs -->
-  <script src="../js/src/${1:filename}.js"></script>
+  <script src="../js/src/0702css_transform_01.js"></script>
 </body>
 </html>
-]]></content>
-  <!-- Optional: Set a tabTrigger to define how to trigger the snippet -->
-  <tabTrigger>ly</tabTrigger>
-  <!-- Optional: Set a scope to limit where the snippet will trigger -->
-  <!-- <scope>source.python</scope> -->
-</snippet>
