--- a/work/asset/a_beginner/html/0706form_exersise_02.html
+++ b/work/asset/a_beginner/html/0706form_exersise_02.html
@@ -66,7 +66,10 @@
   			<div class="sign_in_button">
   			  <input type="submit" id="ok" value="sign in" />
   			</div>
-  			<div class="keep_sign"></div>
+  			<div class="keep_sign">
+  				<input type="checkbox" id="keepSign" value="" name="keepSign" />
+  				<label for="keepSign">keep sign me ....</label>
+  			</div>
   		</fieldset>
 			
 			<!-- sign up ============================== -->
