--- a/work/asset/b_step_01_layout/html/0710monfee_index_test_result.html
+++ b/work/asset/b_step_01_layout/html/0710monfee_index_test_result.html
@@ -41,15 +41,49 @@
   <!-- layout -->
   <div id="wrap">
   	<div class="head_box_wrap">
-  		<header id="headBox">
+  		<header id="headBox" class="top">
   			<h1 class="hidden_wrap" title="monfee 사이트에 오신 것을 환영합니다."><a href="0710monfee_index_test_result.html"><span>monfee</span></a></h1>
   			<nav id="gnb">
   				<h2 class="hidden">monfee global navigaion</h2>
   				<ul>
-  					<li><a href="#">story</a></li>
-  					<li><a href="#">menu</a></li>
-  					<li><a href="#">store</a></li>
-  					<li><a href="#">news</a></li>
+  					<li>
+  						<a href="#">story</a>
+  						<ol>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  						</ol>
+  					</li>
+  					<li>
+  						<a href="#">menu</a>
+  						<ol>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  						</ol>
+  					</li>
+  					<li>
+  						<a href="#">store</a>
+  						<ol>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  						</ol>
+  					</li>
+  					<li>
+  						<a href="#">news</a>
+  						<ol>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  							<li><a href="#">Lorem ipsum.</a></li>
+  						</ol>
+  					</li>
   				</ul>
   			</nav>
   		</header>
@@ -103,17 +137,29 @@
   					</dl>
   				</a>
   			</li>
-  			<li></li>
-  			<li></li>
-  			<li></li>
-  			<li></li>
-  			<li></li>
-  			<li></li>
-  			<li></li>
   		</ul>
   	</article>
   	<div class="issue_text">
-  		
+  		<div class="btn clearfix">
+  			<ul class="indicator hidden_wrap clearfix">
+  				<li><a href="#"><span>내용설명</span></a></li>
+  				<li><a href="#"><span>내용설명</span></a></li>
+  				<li><a href="#"><span>내용설명</span></a></li>
+  				<li><a href="#"><span>내용설명</span></a></li>
+  			</ul>
+  			<div>
+  				<button type="button" class="pause"><i class="fas fa-pause"></i><span class="hidden">일시정지</span></button>
+  				<button type="button" class="play"><i class="fas fa-play"></i><span class="hidden">내용 자동 보기</span></button>
+  			</div>
+  		</div>
+  		<div class="issue_banner">
+  			<ul>
+  				<li class="issue_ban_01"><dl><dt>배너 제목 1</dt><dd>배너 내용설명 lorem100</dd></dl></li>
+  				<li class="issue_ban_02"><dl><dt>배너 제목 2</dt><dd>배너 내용설명 lorem200</dd></dl></li>
+  				<li class="issue_ban_03"><dl><dt>배너 제목 3</dt><dd>배너 내용설명 lorem100</dd></dl></li>
+  				<li class="issue_ban_04"><dl><dt>배너 제목 4</dt><dd>배너 내용설명 lorem150</dd></dl></li>
+  			</ul>
+  		</div>
   	</div>
 
   	<div class="issue_icon">
@@ -150,5 +196,7 @@
   <!-- myJs -->
   <script src="../js/src/0710monfee_index_test_result.js"></script>
   <script src="../js/src/0710monfee_index_test_result_adBox_slide.js"></script>
+  <script src="../js/src/0710monfee_index_test_result_news.js"></script>
+  <script src="../js/src/0710monfee_index_test_result_issue.js"></script>
 </body>
 </html>
