--- a/work/asset/b_step_02_jquery/html/0726load_01.html
+++ b/work/asset/b_step_02_jquery/html/0726load_01.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- 0723gallery_modal_01.html -->
+<!-- 0726load_01.html -->
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8" />
@@ -17,7 +17,8 @@
 
   <!-- import css -->
   <link rel="stylesheet" type="text/css" href="../css/base/reset.css" />
-  <link rel="stylesheet" type="text/css" href="../css/src/0723gallery_modal_01.css" />
+  <link rel="stylesheet" type="text/css" href="../css/src/0726before_file_01.css" />
+  <link rel="stylesheet" type="text/css" href="../css/src/0726load_01.css" />
 
   <!-- 조건부 주석 -->
   <!-- cc:id6 -->
@@ -32,29 +33,11 @@
   <!-- link:touch -->
   <link rel="apple-touch-icon" href="../favicon.png" />
   
-  <title>0723gallery_modal_01</title>
+  <title>0726load_01</title>
 </head>
 <body>
   <!-- layout -->
-  <div id="wrap">
-  	<h1>modal window</h1>
-  	<article id="contentBox">
-  		<div class="modal_box"></div>
-  		<div class="modal_bg"></div>
-
-  		<ul class="list hidden_wrap clearfix">
-  			<li><a href="#"><span>섬네일이미지_01</span></a></li>
-  			<li><a href="#"><span>섬네일이미지_02</span></a></li>
-  			<li><a href="#"><span>섬네일이미지_03</span></a></li>
-  			<li><a href="#"><span>섬네일이미지_04</span></a></li>
-  			<li><a href="#"><span>섬네일이미지_05</span></a></li>
-  			<li><a href="#"><span>섬네일이미지_06</span></a></li>
-  			<li><a href="#"><span>섬네일이미지_07</span></a></li>
-  			<li><a href="#"><span>섬네일이미지_08</span></a></li>
-  			<li><a href="#"><span>섬네일이미지_09</span></a></li>
-  			<li><a href="#"><span>섬네일이미지_10</span></a></li>
-  		</ul>
-  	</article>
+  <div class="wrap">
   </div>
   
   <!-- javascript -->
@@ -63,7 +46,27 @@
   <!-- bootstrap -->
   <!-- <script src="../bootstrap/js/bootstrap.min.js"></script> -->
   <!-- myJs -->
-  <script src="../js/src/0723gallery_modal_01.js"></script>
-  <script src="../js/src/0723gallery_modal_02.js"></script>
+  <!-- <script src="../js/src/0726load_01.js"></script> -->
+  <script>
+  	(function() {
+  		$('body').css({background:'#fdfdfd'});
+  		var wrap = $('.wrap');
+  		// wrap.load("./0726before_file_01.html #headBox");
+
+  		wrap.append('<div class="head_wrap"></div>');
+  		$('.head_wrap').load("./load/headBox.html");
+
+  		wrap.append('<div class="foot_wrap"></div>');
+  		$('.foot_wrap').load("./load/footBox.html");
+
+  			$('#footBox').on('click',function() {
+  				$(this).css({backgroundColor:'#0dd'});
+  			});
+
+  			$('h1').on('click',function(){
+  				$(this).css({color:'#000'});
+  			});
+  	})(jQuery);
+  </script>
 </body>
 </html>
